# EFittness

./: DBDesign.txt  Documentatie.txt  README.txt  docker-compose.yaml  pagesStructure.txt  start-app.ps1
Docu/: Documentatie.txt
New folder/: CMakeLists.txt  dataStructure.json
New folder/mongodb/connectionlogic/: dbvariables.h
New folder/zeromq/: zeromq.cpp
tests/: CMakeLists.txt  main.cpp
tracker/: CMakeLists.txt  DBDesign.txt  dataStructure.json  main.cpp  vcpkg.json
tracker/crow/: routes.cpp  routes.h
tracker/jsonwebtoken/jwtvalidation/: jwtvalidation.cpp  jwtvalidation.h
tracker/logic/timecheckers/: timecheckers.cpp  timecheckers.h
tracker/logic/timeformaters/: timeformater.cpp  timeformater.h
tracker/logic/timelinefolds/: timelinefolds.cpp  timelinefolds.h
tracker/models/static/equipment/: Equipment.cpp  Equipment.h
tracker/models/static/exercise/: Exercise.cpp  Exercise.h
tracker/models/static/muscle/: Muscle.cpp  Muscle.h
tracker/models/timestamps/abstracttimestamp/: AbstractTimestamp.cpp  AbstractTimestamp.h
tracker/models/timestamps/userhistorycardio/: CardioTimestamp.cpp  CardioTimestamp.h
tracker/models/timestamps/userhistorymeal/: MealTimestamp.cpp  MealTimestamp.h
tracker/models/timestamps/userhistorywater/: WaterTimestamp.cpp  WaterTimestamp.h
tracker/models/timestamps/userhistoryworkout/: WorkoutTimestamp.cpp  WorkoutTimestamp.h
tracker/models/userhistory/: UserHistory.cpp  UserHistory.h
tracker/repos/: pqcred.h
tracker/repos/pqcred/: pqcred.cpp  pqcred.h
tracker/repos/staticrepos/abstractstaticrepo/: abstractstaticrepo.cpp  abstractstaticrepo.h
tracker/repos/staticrepos/equipmentrepo/: equipmentrepo.cpp  equipmentrepo.h
tracker/repos/staticrepos/exereciserepo/: exerciserepo.cpp  exerciserepo.h
tracker/repos/staticrepos/msuclesrepo/: musclesrepo.cpp  musclesrepo.h
tracker/repos/timelinerepos/abstracttimelinerepo/: abstracttimelinerepo.cpp  abstracttimelinerepo.h
tracker/repos/timelinerepos/watertimelinerepo/: watertimelinerepo.cpp  watertimelinerepo.h
tracker/repos/timestampconfigs/abstractrepoconfig/: AbstractRepoConfig.cpp  AbstractRepoConfig.h
tracker/repos/timestampconfigs/mealsconfig/: MealsConfig.cpp  MealsConfig.h
tracker/repos/timestamprepos/watertimestamprepo/: watertimestamprepo.cpp  watertimestamprepo.h
tracker/repos/userhistoryrepo/: userhistoryrepo.cpp  userhistoryrepo.h
tracker/repos/watertimelinerepo/: watertimelinerepo.cpp  watertimelinerepo.h
tracker/testing/: tests.cpp
untitled/: main.cpp
userauth/:  .gitignore  .dockerignore  CMakeLists.txt  Dockerfile  FETips.txt  main.cpp  vcpkg.json
userauth/argon2/: argonhelper.cpp  argonhelper.h
userauth/crow/: routes.cpp  routes.h
userauth/jsonwebtoken/jwtgeneration/: jwtgeneration.cpp  jwtgeneration.h
userauth/jsonwebtoken/jwtlogic/: jwtlogic.cpp  jwtlogic.h
userauth/login/: login.cpp  login.h
userauth/models/Location/: Location.cpp  Location.h
userauth/models/UserAuth/: UserAuth.cpp  UserAuth.h
userauth/models/UserData/: UserData.cpp  UserData.h
userauth/mongodb/UserAuthRepo/: userauthRepo.cpp  userauthRepo.h
userauth/mongodb/connectionlogic/: connectionlogic.cpp  connectionlogic.h
userauth/mongodb/mongodbInstance/: MongodbInstance.h
userauth/mongodb/userdataRepo/: userdataRepo.cpp  userdataRepo.h
userauth/signup/: signup.cpp  signup.h
userauth/zeromq/: zeromq.cpp  zeromq.h
userdata/: CMakeLists.txt  Dockerfile  dataStructure.json  main.cpp  vcpkg.json
userdata/crow/: routes.cpp  routes.h
userdata/jsonwebtoken/jwtvalidation/: jwtvalidation.cpp
userdata/models/UserData/: UserData.cpp  UserData.h
userdata/mongodb/UserDataRepo/: userdataRepo.cpp  userdataRepo.h
userdata/mongodb/connectionlogic/: dbvariables.h
userdata/mongodb/mongodbInstance/: MongodbInstance.cpp
userdata/zeromq/: zeromq.cpp  zeromq.h
